--- a/.stickler.yml
+++ b/.stickler.yml
@@ -1,11 +1,5 @@
----
 linters:
-    flake8:
-    eslint:
-        config: './eslint.config'
-    csslint:
-
+  csslint: {  }
 files:
-    ignore:
-        - 'src/generated/*'
-        - 'webroot/bower_components/*'
+  ignore:
+    - 'bower_components/*'
